Nextflow bootstrap